service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nature-service
spec:
  type: NodePort
  selector:
    app: nature
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
